// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListOrganizer Component has a list of fields for each element in value prop: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (2)",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BButton> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) v-model usage on component has changed in Vue 3. Component that expects to work with v-model should now use the "modelValue" prop and emit the "update:modelValue" event. You can update the usage and then opt-in to Vue 3 behavior on a per-component basis with \`compatConfig: { COMPONENT_V_MODEL: false }\`.
  Details: https://v3-migration.vuejs.org/breaking-changes/v-model.html",
    "
",
    " at <BModal",
    "modelValue=false",
    "onUpdate:modelValue=fn",
    "body-class="p-0"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BButton",
    "variant="outline-secondary"",
    "onClick=fn",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) \`beforeDestroy\` has been renamed to \`beforeUnmount\`.",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) vm.$scopedSlots has been removed. Use vm.$slots instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/slots-unification.html",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (2)",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <BButtonClose",
    "onClick=fn<bound onClose>",
    "ref="close-button"",
    "content="&times;"",
    " ...",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (4)",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (2)",
    "
",
    " at <FrField",
    "modelValue=true",
    "onUpdate:modelValue=fn<onUpdateModelValue>",
    "type="checkbox"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (5)",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (3)",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (6)",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (4)",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (3)",
    "
",
    " at <BFormCheckbox",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "onModelCompat:input=fn<onUpdateModelValue>",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (3)",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="mr-0 zindex-1 align-middle"",
    " ...",
    ">",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (2)",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="mr-0 zindex-1 align-middle"",
    " ...",
    ">",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BFormCheckbox> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BFormCheckbox",
    "onModelCompat:input=fn",
    "onInput=fn<bound handleInput>",
    "class="mr-0 zindex-1 align-middle"",
    " ...",
    ">",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="1"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=1",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "appear" with v-bind value \`false\` will render appear="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "persisted" with v-bind value \`false\` will render persisted="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (7)",
    "
",
    " at <BVTransition",
    "noFade=false",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": true,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) vm.$on/$once/$off() have been removed. Use an external event emitter library instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/events-api.html",
  ],
]
`;

exports[`ListOrganizer Component has checkboxes unchecked for fields that are disabled: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "value" with v-bind value \`false\` will render value="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrField",
    "type="checkbox"",
    "label="2"",
    "value=false",
    " ...",
    ">",
    "
",
    " at <BListGroupItem",
    "key=2",
    "data-draggable=true",
    ">",
    "
",
    " at <Draggable",
    "ghost-class="ghost-item"",
    "list=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": false,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "item-key="key"",
    ">",
    "
",
    " at <BListGroup",
    "flush=""",
    ">",
    "
",
    " at <Transition",
    "onBeforeEnter=fn<bound onBeforeEnter>",
    "onEnter=fn<bound onEnter>",
    "onAfterEnter=fn<bound onAfterEnter>",
    " ...",
    ">",
    "
",
    " at <BModal",
    "body-class="p-0"",
    "cancel-variant="link"",
    "scrollable=""",
    " ...",
    ">",
    "
",
    " at <ListOrganizer",
    "value=",
    [
      {
        "enabled": true,
        "key": 1,
        "label": "1",
      },
      {
        "enabled": false,
        "key": 2,
        "label": "2",
      },
      {
        "enabled": true,
        "key": 3,
        "label": "3",
      },
    ],
    "isTesting=true",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
